[gd_scene load_steps=22 format=3 uid="uid://cyb8oxg7okohu"]

[ext_resource type="Script" path="res://scripts/characters/mobs/flying_eye/flying_eye.gd" id="1_cyaj6"]
[ext_resource type="Script" path="res://scripts/characters/mobs/health.gd" id="2_dmq53"]
[ext_resource type="Texture2D" uid="uid://phjh83ntvkpg" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/enemies/flying creature/fly_anim_f0.png" id="3_f7o46"]
[ext_resource type="Texture2D" uid="uid://1arysl2m311p" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/effects (new)/hit_effect_anim_f0.png" id="3_uxisv"]
[ext_resource type="Texture2D" uid="uid://dm380yaeddt0q" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/enemies/flying creature/fly_anim_f1.png" id="4_7pdwj"]
[ext_resource type="Texture2D" uid="uid://dbp5fp1rc7e07" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/effects (new)/hit_effect_anim_f1.png" id="4_m1nim"]
[ext_resource type="Texture2D" uid="uid://bcdoivctlv2w2" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/effects (new)/hit_effect_anim_f2.png" id="5_bkf1o"]
[ext_resource type="Texture2D" uid="uid://3sux545yp6ha" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/enemies/flying creature/fly_anim_f2.png" id="5_xmx3a"]
[ext_resource type="Texture2D" uid="uid://bwnedxpm4bvwm" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/enemies/flying creature/fly_anim_f3.png" id="6_wv0rb"]
[ext_resource type="Script" path="res://scripts/base/state_machine.gd" id="7_tdh2p"]
[ext_resource type="Script" path="res://scripts/characters/mobs/flying_eye/idle.gd" id="8_i3uxi"]
[ext_resource type="Script" path="res://scripts/characters/mobs/flying_eye/follow.gd" id="9_5na00"]
[ext_resource type="Texture2D" uid="uid://e0sk3mjto2yy" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/enemies/flying creature/hit_anim.png" id="10_1fkbg"]
[ext_resource type="Script" path="res://scripts/characters/mobs/flying_eye/wander.gd" id="10_8qtet"]
[ext_resource type="Script" path="res://scripts/characters/mobs/flying_eye/death.gd" id="11_kqg1i"]
[ext_resource type="Script" path="res://scenes/characters/mobs/hit.gd" id="12_cjy2m"]

[sub_resource type="SpriteFrames" id="SpriteFrames_i14yq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_uxisv")
}, {
"duration": 1.0,
"texture": ExtResource("4_m1nim")
}, {
"duration": 1.0,
"texture": ExtResource("5_bkf1o")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_f7o46")
}, {
"duration": 1.0,
"texture": ExtResource("4_7pdwj")
}, {
"duration": 1.0,
"texture": ExtResource("5_xmx3a")
}, {
"duration": 1.0,
"texture": ExtResource("6_wv0rb")
}],
"loop": true,
"name": &"flying",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_1fkbg")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_qq5xk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_30fcm"]
radius = 155.003

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fwq7y"]
size = Vector2(10, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t4ts6"]
size = Vector2(8, 7)

[node name="FlyingEye" type="CharacterBody2D" groups=["mobs"]]
z_index = 1
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_cyaj6")

[node name="Health" type="Node" parent="."]
script = ExtResource("2_dmq53")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_i14yq")
animation = &"flying"

[node name="debug" type="Label" parent="."]
offset_left = -23.0
offset_top = -31.0
offset_right = 26.0
offset_bottom = -8.0
text = "debug"
label_settings = SubResource("LabelSettings_qq5xk")

[node name="DetectionRange" type="Area2D" parent="."]
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource("CircleShape2D_30fcm")

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_fwq7y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_t4ts6")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_max_distance = 500.0
navigation_layers = 2
avoidance_enabled = true
avoidance_layers = 2
avoidance_mask = 2
debug_enabled = true

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("7_tdh2p")

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource("8_i3uxi")

[node name="IdleTimer" type="Timer" parent="StateMachine/Idle"]

[node name="Follow" type="Node2D" parent="StateMachine"]
script = ExtResource("9_5na00")

[node name="FollowTimer" type="Timer" parent="StateMachine/Follow"]
wait_time = 0.2

[node name="Wander" type="Node2D" parent="StateMachine"]
script = ExtResource("10_8qtet")

[node name="WanderTimer" type="Timer" parent="StateMachine/Wander"]

[node name="Hit" type="Node2D" parent="StateMachine"]
script = ExtResource("12_cjy2m")

[node name="HitTimer" type="Timer" parent="StateMachine/Hit"]
wait_time = 0.15
one_shot = true

[node name="Death" type="Node2D" parent="StateMachine"]
script = ExtResource("11_kqg1i")

[node name="DeathTimer" type="Timer" parent="StateMachine/Death"]
wait_time = 0.5
one_shot = true

[connection signal="dead" from="Health" to="StateMachine" method="_on_health_dead"]
[connection signal="took_damage" from="Health" to="StateMachine/Hit" method="_on_health_took_damage"]
[connection signal="area_entered" from="DetectionRange" to="StateMachine/Idle" method="_on_detection_range_area_entered"]
[connection signal="area_entered" from="DetectionRange" to="StateMachine/Follow" method="_on_detection_range_area_entered"]
[connection signal="area_entered" from="DetectionRange" to="StateMachine/Wander" method="_on_detection_range_area_entered"]
[connection signal="area_exited" from="DetectionRange" to="StateMachine/Idle" method="_on_detection_range_area_exited"]
[connection signal="area_exited" from="DetectionRange" to="StateMachine/Follow" method="_on_detection_range_area_exited"]
[connection signal="area_exited" from="DetectionRange" to="StateMachine/Wander" method="_on_detection_range_area_exited"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="timeout" from="StateMachine/Idle/IdleTimer" to="StateMachine/Idle" method="_on_idle_timer_timeout"]
[connection signal="timeout" from="StateMachine/Follow/FollowTimer" to="StateMachine/Follow" method="_on_follow_timer_timeout"]
[connection signal="timeout" from="StateMachine/Wander/WanderTimer" to="StateMachine/Wander" method="_on_wander_timer_timeout"]
[connection signal="timeout" from="StateMachine/Hit/HitTimer" to="StateMachine/Hit" method="_on_hit_timer_timeout"]
[connection signal="timeout" from="StateMachine/Death/DeathTimer" to="StateMachine/Death" method="_on_death_timer_timeout"]
